--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to your personal expense tracker!</title>
+  <title>Your Expense Tracker</title>
 </head>
 <body>
-  <a href='./addTransaction'>Add Expense</a>
+  <h1> Welcome! Let's log your expenses.</h1>
+  <a href='./add/expense'>Add Expense</a><br>
+  <a href='./report'>View Report</a>
 </body>
 </html>
