--- a/client/added.html
+++ b/client/added.html
@@ -2,10 +2,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Your Expense Tracker</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../client/styles/addTransaction.css"> 
 </head>
 <body>
   <h1> Successfully saved!</h1>
-  <div><a href='./add/expense'>Add Another Expense</a></div>
-  <a href='../'>Go Back Home</a>
+  <a class="submit-button" href='./add/expense'>Add Expense</a>
+  <br>
+  <br>
+  <br>
+  <a class="home-button" href='../'>Back Home</a>
 </body>
 </html>
