--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,24 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Your Expense Tracker</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../client/styles/index.css">
+  <title>xSpearmint</title>
 </head>
 <body>
-  <h1> Welcome! Let's log your expenses.</h1>
-  <a href='./add/expense'>Add Expense</a><br>
-  <a href='./report'>View Report</a>
+  <h1 class="page-title"> Welcome to xSpearmint</h1>
+
+  <br>
+  <a class="expense-button" href='./add/expense'>Add Expense</a><br>
+  <br>
+  <br>
+  <a class="report-button" href='./report'>View Report</a>
 </body>
+<style>
+  
+
+</style>
+
 </html>
