--- a/client/index.html
+++ b/client/index.html
@@ -11,10 +11,11 @@
   <h1 class="page-title"> Welcome to xSpearmint</h1>
 
   <br>
-  <a class="expense-button" href='./add/expense'>Add Expense</a><br>
-  <br>
-  <br>
-  <a class="report-button" href='./report'>View Report</a>
+  <div class="home-buttons">
+  <a class="expense-button" href='./add/expense'>Add Expense</a>
+  <a class="adjustments-button" href='./adjustments'> Adjustments</a>
+  <a class="report-button" href='./report'>View Report</a> 
+  </div>
 </body>
 <style>
   
