--- a/client/addTransaction.html
+++ b/client/addTransaction.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../client/styles/addTransaction.css"> 
-  <title>Your Expense Tracker</title>
+  <title>Add An Expense</title>
 </head>
 <body>
   <h2>Add An Expense</h2>
